fix(color-picker): #WB-1953, better check alignement

--- a/packages/bootstrap/scss/components/_color-picker.scss
+++ b/packages/bootstrap/scss/components/_color-picker.scss
@@ -17,6 +17,7 @@
         height: 24px;
         border-radius: 4px;
         border: 1px solid #e4e4e4;
+        padding: 0;
 
         &.selected {
           &::after {
@@ -25,10 +26,11 @@
             width: 18px;
             height: 18px;
             background-size: cover;
-            background-position: -2px 0;
+            background-position: 2px 0;
             background-repeat: no-repeat;
             background-image: url("data:image/svg+xml,%3Csvg width='18' height='18' viewBox='0 0 18 18' xmlns='http://www.w3.org/2000/svg' aria-hidden='true'%3E%3Cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M15 3.75L7.5 13.5L3 8.25'%3E%3C/path%3E%3C/svg%3E");
           }
+          
           &.light::after {
             background-image: url("data:image/svg+xml,%3Csvg width='18' height='18' viewBox='0 0 18 18' xmlns='http://www.w3.org/2000/svg' aria-hidden='true'%3E%3Cpath fill='none' stroke='%234a4a4a' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M15 3.75L7.5 13.5L3 8.25'%3E%3C/path%3E%3C/svg%3E");
           }
